2001-04-12  Eric Busboom  <eric@softwarestudio.org>

	* icalvalue.c Added quoting to apostrophies ("'") in text
 	values. This is not required but the spec, but it is necessary in
 	icallangbind_property_eval_string, since ' is special in both perl
 	and python.

2001-04-10  Eric Busboom  <eric@softwarestudio.org>

	* icalvalue.c Added routine icalvalue_reset_kind. This routine is
 	now called by all autogenerated icalvalue_set_*
 	routines. icalvalue_reset_kind() will change the kind of the value
 	based on the data in the value. Currently, it will set a value to
 	either DATETIME or DATE based on the is_date flag of icaltimetype.

2001-04-09  Eric Busboom  <eric@softwarestudio.org>

	* icalproperty.h Converted REQUEST-STATUS to use the struct
 	icalreqstat structure instead of a string

2001-04-01  Eric Busboom  <eric@softwarestudio.org>

	* icalcomponent.h Changed meaning of
 	icalcomponent_new_from_string. It used to create a new component
 	given the text name of the component type to create. Now it calls
 	icalparser_parse_string to create a new component from the
 	complete iCalendar text representation of the component.

2001-03-31  Eric Busboom  <eric@softwarestudio.org>

	* icalvalue Changed ACTION properties to take an ACTION value
 	instead of TEXT. The ACTION value is enumerated.

2001-03-26  Eric Busboom  <eric@softwarestudio.org>

	* icalparameter.h icalparameter_rsvp_* routines now take, return
 	ICAL_RSVP_TRUE and ICAL_RSVP_FALSE, not 0 and 1

2001-03-25  Eric Busboom  <eric@softwarestudio.org>

	* icalrecur.c Many changes to get YEARLY rules working and fix
 	other errors. Recurrences are stil broken, but more types of rue
 	now work.

2001-03-16  Eric Busboom  <eric@softwarestudio.org>

	* icalparameter.c Changed icalparameter_new_from_string() to
 	icalparameter_new_from_value_string(). Created new
 	icalparameter_new_from_string() that takes strings of
 	form"PARAMNAME=PARAMVALUE"

	* *_XNAME changes all _XNAME enumerations to _X
