@@ -5,7 +5,7 @@
 "ATTENDEE","CAL-ADDRESS","CAL-ADDRESS"
 "CALSCALE","TEXT","TEXT"
 "CATEGORIES","TEXT","TEXT"
-"CLASS","TEXT","TEXT"
+"CLASS","CLASS","CLASS"
 "COMMENT","TEXT","TEXT"
 "COMPLETED","DATE-TIME","DATE-TIME"
 "CONTACT","TEXT","TEXT"
